# hisense-ac-remote-dg11l1

./: .gitignore  LICENSE  README.md  base_codes.json  code_generation.py  controller_features.py  hisense-ir.ipynb  project.toml  pyproject.toml
assets/: base_codes.json
controller/: encoder.py  exceptions.py  features.py  interface.py
dg11l/: encoder.py  exceptions.py  features.py  interface.py
dg11l/assets/: base_codes.json
dg11l1/: decoder.py  encoder.py  features.py  generators.py  interface.py
dg11l1/assets/: 1523.json  auto_ifeel_on.json  base_codes.json  ifeel_on_codes.json  smartir_codes.json  turbo_quiet_economy_ifeel_on.json
dg11l1/tests/: test_features.py
resources/: hisense-ir.ipynb
tests/: test_features.py
