[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dg11l1"
version = "0.2"
description = "Hisense AC remote DG11L1-12 model IR code generation."
authors = [{name = "jon.alamo", email = "jonrivala@gmail.com"}]
dependencies = ["broadlink"]
readme = "README.md"
license = {file = "LICENSE"}


[tool.setuptools.package-data]
"dg11l1" = ["assets/*"]
